<resources>
    <string name="app_name">Beer Advisor</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password2Rg">Repeat Password</string>
    <string name="register">Register</string>
    <string name="default_web_client_id">403704541151-9miqksu7dhjgs99s3assf0up5an4657s.apps.googleusercontent.com</string>
    <string name="login">login</string>


    <string name="unexpected_error" translatable="false">unexpected_error</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="login_with_google" translatable="false">Login with Google</string>

    //messaggi snackbar
    <string name="error_retrieving_beers">Error in retrieving the beers</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="wrong_password">Wrong password</string>
    <string name="already_google_login">Unable to change password when logged in with Google</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_valid_email">No valid email</string>
    <string name="no_valid_password">No valid password</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="change_profile_photo">Change profile photo</string>
    <string name="change_email">Change email</string>
    <string name="change_password">Change password</string>
    <string name="logout" translatable="false">Logout</string>

    <string name="oldPw">Old Password</string>
    <string name="newPw">New Password</string>
    <string name="repeatPw">Repeat Password</string>

    //String register
    <string name="insertName">Insert name</string>
    <string name="insertSurname">Insert surname</string>
    <string name="emailNovalid">No valid Email</string>
    <string name="insertPassword">Insert Password</string>
    <string name="insertRepeatPassword">Insert repeat Password</string>
    <string name="noEqualPassword">No equal password</string>

    <string name="RegisterComplete">Registration completed</string>
    <string name="RegisterFailed">Registration failed</string>


    <string name="find_beer">Find beer</string>

    <string name="map_description" translatable="false">Google Maps</string>
    <string name="description">Description</string>
    <string name="gradiaton">Gradiation %</string>
    <string name="food_pairings">Food Pairings</string>
    <string name="comments">Comments</string>

    <string name="lastDrunk">Last drunk</string>
    <string name="discoverNewBeers">Discover new beers</string>
    <string name="seeAll">See all</string>
    <string name="searchBarHint">Search beer</string>

    <string name="filters_text">Filters</string>
    <string name="bitterness_filter">Bitterness</string>
    <string name="from_the_most_bitter">From most bitter</string>
    <string name="from_the_less_bitter">From less bitter</string>
    <string name="abv_filter">Abv</string>
    <string name="from_the_most_alcholic">From most alcholic</string>
    <string name="from_the_less_alcholic">From less alcholic</string>
    <string name="all_beers">All beers</string>
    <string name="error_password">Password Error</string>
    <string name="error_user_collision_message" translatable="false">User collision error</string>
    <string name="error_login_password_message">login password error</string>
    <string name="error_login_user_message">Error user login</string>
    <string name="check_login_data_message">Check the data you inserted</string>
    <string name="error_no_google_account_found_message">No google account found</string>
    <string name="old_password_error">Invalid old password</string>
    <string name="new_password_error">Choose another password</string>
    <string name="password_changed">Password changed!</string>
    <string name="password_error_google">Can\'t change password from google account</string>
    <string name="empty_fields">Empty fields</string>
    <string name="passwords_not_match">Password not match</string>
    <string name="caps_drunk_beers">Caps drunk beers</string>

    <string name="favorite_beers">Favorite beers</string>
    <string name="sign_as_drunk">Sign as drunk</string>
    <string name="addComment">Add</string>
    <string name="add_comment">Add Comment</string>
    <string name="ibu">ibu:</string>
    <string name="filters">filter</string>
    <string name="from_the_lightest">from the lightest</string>
    <string name="from_the_darkest">from the darkest</string>
    <string name="color_grade_beer">color grade beer</string>
    <string name="catch_phrase" translatable="false">find the perfect beer for the perfect moment!</string>

</resources>