<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background">


    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11sp"
        android:fontFamily="@font/testo"
        android:text="Beer advisor"
        android:textColor="@color/orange"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView

        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logo_def"
        android:layout_marginTop="1sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="290sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:textColorHint="@color/grey"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameRg"
            android:fontFamily="@font/testo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/trasparent"
            android:hint="@string/name"
            android:paddingBottom="2sp"
            android:paddingTop="0dp"
            android:paddingStart="0dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/black"
        />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="290sp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        android:layout_marginTop="5sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surnameRg"
            android:hint="@string/surname"
            android:fontFamily="@font/testo"
            android:layout_width="match_parent"
            android:background="@color/trasparent"
            android:layout_height="wrap_content"
            android:paddingBottom="2sp"
            android:paddingTop="0dp"
            android:paddingStart="0dp"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="290sp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        android:layout_marginTop="5sp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailRg"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/testo"
            android:background="@color/trasparent"
            android:paddingBottom="2sp"
            android:paddingTop="0dp"
            android:paddingStart="0dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="290sp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        android:layout_marginTop="5sp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordRg"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/testo"
            android:background="@color/trasparent"
            android:paddingBottom="2sp"
            android:paddingTop="0dp"
            android:paddingStart="0dp"


            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="290sp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        android:layout_marginTop="5sp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password2Rg"
            android:hint="@string/password2Rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/testo"
            android:background="@color/trasparent"
            android:paddingBottom="2sp"
            android:paddingTop="0dp"
            android:paddingStart="0dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="10sp"
        android:id="@+id/Confirm_Registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/my_border"
        android:fontFamily="@font/testo"
        android:text="@string/register"
        android:textColor="@color/orange"
        android:textSize="18dp"
    />

</LinearLayout>