<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="290sp"
        android:layout_height="wrap_content"

        app:hintEnabled="false"
        android:layout_marginTop="5sp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailLg"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/testo"
            android:textColorHint="@color/grey"
            android:background="@color/trasparent"
            android:paddingBottom="2sp"
            android:paddingTop="0dp"
            android:paddingStart="0dp"
            android:textColor="@color/black"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="290sp"
        android:layout_height="wrap_content"
        app:hintEnabled="false"

        android:layout_marginTop="5sp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordLg"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/testo"
            android:background="@color/trasparent"
            android:textColorHint="@color/grey"
            android:paddingBottom="2sp"
            android:paddingTop="0dp"
            android:paddingStart="0dp"
            android:textColor="@color/black"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:inputType="textPassword"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirmLoginBtn"
        style = "@style/CustomButtonStyle"
        android:layout_marginTop="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        />


</FrameLayout>