<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.MainFragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >



    <TextView
            android:id="@+id/last_drunk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/testo"
            android:text="@string/lastDrunk"
            android:textColor="@color/md_theme_light_inversePrimary"
            android:textSize="20sp" />

    <TextView
        android:id="@+id/seeAllLastDrunk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/testo"
        android:text="@string/seeAll"
        android:textColor="@color/md_theme_light_inversePrimary"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id = "@+id/recyclerViewNewBeer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layoutManager = "androidx.recyclerview.widget.LinearLayoutManager">

    </androidx.recyclerview.widget.RecyclerView>


    <TextView
        android:id="@+id/discoverBeer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="220dp"
        android:fontFamily="@font/testo"
        android:text="@string/discoverNewBeers"
        android:textColor="@color/md_theme_light_inversePrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/seeAllNewBeers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="220dp"
        android:fontFamily="@font/testo"
        android:text="@string/seeAll"
        android:textColor="@color/md_theme_light_inversePrimary"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id = "@+id/recyclerViewNewBeer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layoutManager = "androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="240dp">

    </androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>
</FrameLayout>