<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/nameSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="100dp"
            android:background="@null"
            android:fontFamily="@font/testo"
            android:text="Name Surname"
            android:textColor="@color/md_theme_light_inversePrimary"
            android:textSize="30sp"
            />

        <ImageView
            android:id="@+id/profilePhoto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="100dp"
            android:src="@drawable/ic_app_user"
            android:layout_below="@id/nameSurname"
            android:layout_centerHorizontal="true"
            />
        <Button
            android:id="@+id/changePhotoBtn"

            android:layout_centerHorizontal="true"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="290dp"
            android:layout_height="48dp"
            android:fontFamily="@font/testo"
            android:backgroundTint="@color/md_theme_dark_inversePrimary"
            android:layout_below="@id/profilePhoto"

            android:text="@string/change_profile_photo"
            android:textColor="@color/white"
            android:textSize="18sp"

            android:layout_marginLeft="80dp"

            android:layout_marginRight="80dp"/>


        <Button
            android:id="@+id/changePasswordBtn"

            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="290dp"
            android:layout_height="48dp"
            android:fontFamily="@font/testo"
            android:backgroundTint="@color/md_theme_dark_inversePrimary"
            android:layout_below="@id/profilePhoto"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="18sp"

            android:layout_marginLeft="80dp"

            android:layout_marginRight="80dp"/>

        <Button
            android:id="@+id/logoutBtn"

            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="290dp"
            android:layout_height="48dp"
            android:fontFamily="@font/testo"
            android:backgroundTint="@color/md_theme_dark_inversePrimary"

            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_below="@id/changePasswordBtn"
            android:layout_marginLeft="80dp"

            android:layout_marginRight="80dp"
            />



    </LinearLayout>




</FrameLayout>